# km-curve-digitizer

./: .env.example  .gitignore  README.md  app.py  digitize_single.py  my_plot_curve_Radiotherapy.csv  my_plot_curve_Radiotherapy_plus_cetuximab.csv  my_plot_digitized.json  pyproject.toml  requirements.txt  run_benchmark.py  run_real_world_benchmark.py
data/real_world/: annotations.json
data/results/: .gitkeep  benchmark_report.txt  benchmark_summary.json  easy_000_result.json  easy_001_result.json  easy_002_result.json  easy_003_result.json  easy_004_result.json  easy_005_result.json  easy_006_result.json  easy_007_result.json  easy_008_result.json  easy_009_result.json  easy_010_result.json  easy_011_result.json  easy_012_result.json  easy_013_result.json  easy_014_result.json  easy_015_result.json  easy_016_result.json  easy_017_result.json  easy_018_result.json  easy_019_result.json  easy_020_result.json  easy_021_result.json  easy_022_result.json  easy_023_result.json  easy_024_result.json  easy_025_result.json  easy_026_result.json  easy_027_result.json  easy_028_result.json  easy_029_result.json  easy_030_result.json  easy_031_result.json  easy_032_result.json  easy_033_result.json  easy_034_result.json  easy_035_result.json  easy_036_result.json  (+195 more)
data/results_real_world/: .gitkeep  (+2 more)
docs/: files.md  workflow.md
out_bench/: summary.csv
out_digitized/: curves.csv
scripts/: digitize_image.py  run_benchmark.py
src/: __init__.py  cv_extractor.py  cv_only_digitizer.py  digitize_single.py  digitizer.py  llm_reader.py  metrics.py  synthesizer.py  utils.py
(+251 files in other folders)
